@@ -26,6 +26,7 @@
   * Added a plotting helper function to lsl.imaging.utils
   * Added a new overlay module for images called lsl.imaging.overlay
   * Fixed several bugs in lsl.sim.vis and lsl.imaging.utils related to single-channel data sets
+  * Added an option to export the images created to imageIDI.py to a FITS image file
 
 1.0.0
   * Added in LWA Development Primitives module (lsl.reader.ldp)
